--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "kuroshiro": "^1.2.0",
+    "kuroshiro-analyzer-kuromoji": "^1.1.0",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.5",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-spaces": "^0.3.2",
+    "swr": "^1.2.2",
+    "tacti": "^0.0.11"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "typescript": "4.6"
   }
 }
